<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_course"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_course" />
    <item
        android:id="@+id/nav_news"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_market"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_market" />
    <item
        android:id="@+id/nav_lostfound"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_lost_found" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
